# translator

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain
.github/: FUNDING.yml  dependabot.yml
deepl/: .gitignore  Cargo.toml
deepl/src/: api.rs  lang.rs  lib.rs  local.rs  online.rs
res/: copy-translator.desktop  settings.toml  translator.desktop
src/: cfg.rs  font.rs  hotkey.rs  lib.rs  main.rs  mouse.rs  toggle_switch.rs  ui.rs  unix.rs  windows.rs
src/deepl/: api_offical.rs  jsonrpc.rs  mod.rs  req_sample.json
