[package]
name = "copy-translator"
version = "0.4.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1

[dependencies]
clipboard = "0.5"
cfg-if = "1"
config = "0.13"
deepl = { package = "deepl-api-client", version = "0.2" }
eframe = "0.19"
egui = "0.19"
egui_glium = "0.19"
glium = "0.32"
lazy_static = "1.4"
log = "0.4"
piet-common = "0.5"
tauri-hotkey = { git = "https://github.com/zu1k/tauri-hotkey-rs.git" }
ico = "0.1"
rdev = { git = "https://github.com/asur4s/rdev" }
poll-promise = "0.1"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "copy-translator.exe"
LegalCopyright = "Copyright © 2021-2022 zu1k"
ProductName = "CopyTranslator"
ProductVersion = "0.4.0"
FileDescription = "CopyTranslator: 简单、轻量、好用的划词翻译软件"
