[package]
name = "deepl"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.22", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
deepl-rs = { path = "../../deepl-rs", optional = true }

[features]
online = ["reqwest", "tokio"]
local = ["deepl-rs"]
